# TenmaScope-obs

./: .gitmodules  CMakeLists.txt
libtenma/: configure.ac
src/: tenmascope-main.c  tenmascope-source.c
